# SRCCChatBot

./: .env.example  .gitignore  CLAUDE.md  Makefile  SRCCセンちゃんBotベースナレッジ_20260325.xlsx  _patch_version_check.py  pyproject.toml  railway.toml  requirements.txt  start.bat  vercel.json
.obsidian/: workspace.json
SRCCセンちゃんボット/: CHANGELOG.md  SPEC.md  STRUCTURE.md
SRCCセンちゃんボット/.obsidian/: workspace.json
SRCCセンちゃんボット/docs/: LEGACY_LOG.md
app/: config.py  main.py
app/api/: __init__.py  chat.py  health.py  logs.py
app/core/: __init__.py  context_manager.py  entity_extractor.py  hybrid_search.py  pipeline.py  prompt_builder.py  query_logger.py  store_scraper.py
app/models/: __init__.py  request.py  response.py
app/utils/: __init__.py  logger.py  text_normalizer.py
data/: bm25_index.pkl
data/excel/: srcc_knowledge_20260402_103704.xlsx
data/faq/: faq_master.json
data/glossary/: glossary_master.json
docs/: CHANGELOG.md  LOCAL_LLM_HANDOVER.md  SPEC.md  STRUCTURE.md
frontend/: next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx
frontend/components/: ChatWindow.tsx  DebugPanel.tsx  MessageBubble.tsx  RobotAvatar.tsx  Sidebar.tsx  SourceCitation.tsx
frontend/lib/: version.ts
scripts/: build_bm25_index.py  convert_csv_to_faq.py  convert_csv_to_glossary.py  export_to_excel.py  ingest.py  install_hooks.py  measure_prompt_tokens.py  sync_version.py  test_connections.py  validate_data.py
tests/unit/: test_context_manager.py  test_entity_extractor.py  test_hybrid_search.py
(+2 files in other folders)
